# django-pgbulk

./: .env.template  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  devops.py  environment.yml  footing.yaml  mkdocs.yml  pyproject.toml  settings.py  setup.cfg  temple.yaml  tox.ini
.circleci/: config.yml
docs/: Makefile  conf.py  contributing.md  guide.md  index.md  index.rst  installation.md  installation.rst  reference.md  release_notes.md  requirements.txt
docs/css/: mkdocstrings.css
pgbulk/: __init__.py  core.py  version.py
pgbulk/tests/: models.py  test_core.py
