[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py38']

[tool.coverage.run]
branch = true
source = ["pgbulk"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "pytest.mark.skip"
]
show_missing = true
fail_under = 100

[tool.poetry]
name = "django-pgbulk"
packages = [
  { include = "pgbulk" }
]
exclude = [
  "*/tests/"
]
version = "0.0.0"
description = "Native postgres bulk update and upsert operations."
authors = ["Opus 10 Engineering"]
classifiers = [
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/Opus10/django-pgbulk"
repository = "https://github.com/Opus10/django-pgbulk"
documentation = "https://django-pgbulk.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
django = ">=3"

[tool.poetry.dev-dependencies]
black = "22.6.0"
dj-database-url = "0.5.0"
flake8 = "3.9.2"
flake8-bugbear = "22.1.11"
flake8-comprehensions = "3.8.0"
flake8-import-order = "0.18.1"
flake8-logging-format = "0.6.0"
flake8-mutable = "1.2.0"
git-tidy = "1.2.0"
myst-parser = "0.18.0"
packaging = ">=19.2"
pip = "*"
poetry-core = "1.3.2"
pre-commit = "2.13.0"
psycopg2-binary = "2.9.6"
pytest = "7.0.0"
pytest-cov = "3.0.0"
pytest-dotenv = "0.5.2"
pytest-django = "4.5.2"
requests = "2.25.1"
ruff = "0.0.292"
Sphinx = "4.4.0"
sphinx-rtd-theme = "1.0.0"
footing = "*"
tox = "3.24.5"
zipp = "3.4.1"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "--reuse-db"
testpaths = "pgbulk/tests"
norecursedirs = ".venv"
DJANGO_SETTINGS_MODULE = "settings"
